ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-02-05 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.0 RC3

2008-02-05 Benedikt Heintel
	- GUI:
		* Fixed: Graphical issue on reseller/order.php
	- LANGUAGES:
		* Updated: Turkish
		* Updated all languages

2008-02-04 Benedikt Heintel
	- SETUP:
		* Fixed #976: handeled duplicate entries on unique key on update from VHCS
		* Updated: Improved SQL handling for updated versions

2008-02-03 Benedikt Heintel
	- GUI:
		* Added: New look and feel of SQL handling (created by macbishop)

2008-02-03 Christian Hernmarck
	- SETUP:
		* Fixed #983: New FasCGT Changes break the start of Apache
	- GUI:
		* Small fix in default header/footer for orders made them html compliant...

2008-02-02 Benedikt Heintel
	- SETUP:
		* Fixed #981: bind fails

2008-01-27 Benedikt Heintel
	- SETUP:
		* Fixed #926: VHCS 2.4.71 update no apache config
		* Fixed #966: Updatescripts fails Update RC2x -> RC3

2008-01-27 Christian Hernmarck
	- GUI:
		* Fixed a small error in client/webtools.php which always showed debug variables...

2008-01-24 Benedikt Heintel
	- ENGINE:
		* Fixed #965: Error in ispcp-dmn-mngr
	- SETUP:
		* Fixed #958: Some Errors in Updatescript

2008-01-21 Benedikt Heintel
	- CONFIG:
		* Fixed #960: Bind error hostmaster -> postmaster

2008-01-17 Benedikt Heintel
	- DISTROS:
		* Fixed #464: Errors in SuSE Installation " yast -i `cat ./docs/SuSE/suse-packages`"
		* Fixed #515: fastcgi module OpenSuse 10.2
		* Fixed #797: Error in package list for Suse
		* Fixed #814: named db dir setting in ispcp fedora
	- ENGINE:
		* Fixed #725: Problem with autoresponder and amavis

2008-01-15 Benedikt Heintel
	- GUI:
		* Added: AWStats link in client's webtools
	- SETUP:
		* Fixed #958: Some Errors in Updatescript

2008-01-14 Benedikt Heintel
	- SETUP:
		* Fixed #55: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0 RC3
						and from ispCP ω 1.0.0 RC2 to ispCP ω 1.0.0 RC3
		* Fixed #955: "ispcp" Folder in /etc/apache2 is missing
