@@ -26,6 +26,12 @@ LogFormat "%B" traff
 </IfModule>
 
 #
+# let the customer decide what charset he likes to use
+#
+
+AddDefaultCharset Off
+
+#
 # Header End
 #
 
