@@ -107,6 +107,8 @@ DATABASE_DIR = /var/lib/mysql
 
 CMD_MYSQLDUMP = /usr/bin/mysqldump
 
+DATABASE_UTF8 = yes
+
 #
 # Main variables
 #
